# django-vises

./: .pre-commit-config.yaml  LICENSE  README.md  TODO  pyproject.toml
.github/workflows/: check-pytest.yaml
django_vises/: apps.py  middleware.py
django_vises/common/: enum.py
django_vises/db/: data_set_redis.py  influxdb.py  influxdb2.py  redis_set.py
django_vises/db/model/: base.py
django_vises/deploy/: deploy_stage.py
django_vises/django_settings/: context_processors.py  env_var.py  helpers.py
django_vises/helpers/: data_set_redis.py  git.py  sentry.py
django_vises/models/: base.py  general_object.py
django_vises/task/: celery.py
django_vises/templatetags/: vises.py
django_vises/vises/: deploy_stage.py  model.py  settings.py
examples/example_project/: README.md  example.env
examples/example_project/example_project/: asgi.py  ev.py  settings.py  urls.py  wsgi.py
examples/example_project/example_project/apps/core/: views.py
examples/example_project/example_project/core/: apps.py
examples/example_project/example_project/core/templates/core/: vises_django_settings.html
requirements.d/: base.txt  dev.txt  extra.txt  pypi.txt  test.txt
tests/: common.py  test_data_set_redis.py  test_settings.py  test_vise_common_enum.py  test_vise_db_redis_set.py  test_vise_django_settings.py  test_vise_redis_set_int.py  test_vise_redis_set_str.py  test_vise_redis_set_uuid.py
