[project]
name = "django-vises"
description = "Django Vises."
readme = "README.md"
requires-python = ">=3.13"
license-files = ["LICENSE"]
authors = [{ name = "Rex Zhang" }, { email = "rex.zhang@gmail.com" }]
keywords = ["django"]
classifiers = ["Development Status :: 4 - Beta", 'Framework :: Django :: 5.2']

dynamic = ["version", "dependencies"]

[build-system]
# https://peps.python.org/pep-0621
# https://setuptools.pypa.io/en/latest/userguide/quickstart.html
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "django_vises.__version__" }
dependencies = { file = "requirements.d/base.txt" }

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--cov=django_vises --cov-report html --ignore=tests/by_hand"
asyncio_mode = "auto"

[tool.isort]
profile = "black"

[tool.djlint]
indent_size = 2
ignore = "H030,H031,D018"
